--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Descripción breve de tu portfolio" />
     <title>Mi Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
 </head>
 <body>
    <div class="container">
@@ -18,8 +17,71 @@
       </header>
     </div>
     <hr>
+    <div class="skills">
+      <h2>🧠 Skills:</h2>
+      <div class="skills-carousel" aria-label="Tecnologías (marquee)">
+        <div class="skills-inner">
+          <a href="https://skillicons.dev">
+            <img class="skills-strip" draggable="false" loading="eager" decoding="async"
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,git,github,gitlab,docker,pycharm,vscode&perline=19" alt="My Skills">
+          </a>
+          <a href="https://skillicons.dev">
+            <img class="skills-strip" draggable="false" loading="eager" decoding="async"
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,git,github,gitlab,docker,pycharm,vscode&perline=19" alt="My Skills">
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr>
     <div class="projects">
-        <h2>🎓 Algunos de mis proyectos:</h2>
+      <h2>🎓 Algunos de mis proyectos:</h2>
+      <div class="projects-grid-1">
+        <a class="project-card" href="https://github.com/100472261/TFG" target="_blank">
+          <img src="images/Captura.PNG" alt="Proyecto 1" />
+          <div class="project-info">
+            <h3>TFG</h3>
+            <p>Trabajo de Fin de Grado.</p>
+          </div>
+        </a>
+        <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
+          <img src="images/Preprocesado.JPG" alt="Proyecto 2" />
+          <div class="project-info">
+            <h3>Preprocesado de datos</h3>
+            <p>Limpieza y transformación de datos.</p>
+          </div>
+        </a>
+      </div>
+      <div class="projects-grid-2">
+        <a class="project-card" href="https://github.com/100472261/Power-BI" target="_blank">
+          <img src="images/Reporte_2.PNG" alt="Proyecto 3" />
+          <div class="project-info">
+            <h3>Power BI</h3>
+            <p>Reportes hechos con esta herramienta.</p>
+          </div>
+        </a>
+        <a class="project-card" href="https://github.com/100472261/Tableau" target="_blank">
+          <img src="images/Reporte_1.PNG" alt="Proyecto 4" />
+          <div class="project-info">
+            <h3>Tableau</h3>
+            <p>Reportes hechos con esta herramienta.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <hr>
+    <div class="contacto">
+      <h2>📫 Contacto:</h2>
+      <div class="grid-contacto">
+        <a id="linkedin" class="card" href="https://www.linkedin.com/in/jesus-maria-llanes" target="_blank">
+          <img src="https://custom-icon-badges.demolab.com/badge/LinkedIn-0A66C2?logo=linkedin-white&logoColor=fff" alt="LinkedIn" />
+        </a>
+        <a id="gmail" class="card" href="mailto:jesusmariallanes13@gmail.com" target="_blank">
+          <img src="https://img.shields.io/badge/Gmail-D14836?logo=gmail&logoColor=white" alt="Gmail" />
+        </a>
+        <a id="github" class="card" href="https://github.com/100472261" target="_blank">
+          <img src="https://img.shields.io/badge/GitHub-%23121011.svg?logo=github&logoColor=white" alt="GitHub" />
+        </a>
+      </div>
     </div>
   </div>
 </body>
