--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <a class="project-card" href="https://github.com/100472261/TFG" target="_blank">
           <img src="images/Captura.PNG" alt="Proyecto 1" />
           <div class="project-info">
-            <h3>TFG</h3>
+            <h2>TFG</h2>
             <p>Trabajo de Fin de Grado.</p>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
           <img src="images/Preprocesado.JPG" alt="Proyecto 2" />
           <div class="project-info">
-            <h3>Preprocesado de datos</h3>
+            <h2>Preprocesado de datos</h2>
             <p>Limpieza y transformación de datos.</p>
           </div>
         </a>
@@ -55,14 +55,14 @@
         <a class="project-card" href="https://github.com/100472261/Power-BI" target="_blank">
           <img src="images/Reporte_2.PNG" alt="Proyecto 3" />
           <div class="project-info">
-            <h3>Power BI</h3>
+            <h2>Power BI</h2>
             <p>Reportes hechos con esta herramienta.</p>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Tableau" target="_blank">
           <img src="images/Reporte_1.PNG" alt="Proyecto 4" />
           <div class="project-info">
-            <h3>Tableau</h3>
+            <h2>Tableau</h2>
             <p>Reportes hechos con esta herramienta.</p>
           </div>
         </a>
@@ -70,16 +70,20 @@
     </div>
     <hr>
     <div class="contacto">
-      <h2>📫 Contacto:</h2>
+      <h2 id="titulo-contacto">📫 Contacto:</h2>
       <div class="grid-contacto">
-        <a id="linkedin" class="card" href="https://www.linkedin.com/in/jesus-maria-llanes" target="_blank">
-          <img src="https://custom-icon-badges.demolab.com/badge/LinkedIn-0A66C2?logo=linkedin-white&logoColor=fff" alt="LinkedIn" />
+        <a id="linkedin" class="card" href="https://www.linkedin.com/in/jesus-maria-llanes" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+          <img class="card-icon" src="https://skillicons.dev/icons?i=linkedin&perline=1" alt="Linkedin">
+          <h2 class="card-text">LinkedIn</h2>
         </a>
-        <a id="gmail" class="card" href="mailto:jesusmariallanes13@gmail.com" target="_blank">
-          <img src="https://img.shields.io/badge/Gmail-D14836?logo=gmail&logoColor=white" alt="Gmail" />
+        <a id="gmail" class="card" href="mailto:jesusmariallanes13@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Gmail">
+          <img class="card-icon" src="https://skillicons.dev/icons?i=gmail&perline=1" alt="Gmail">
+          <h2 class="card-text">Gmail</h2>
         </a>
-        <a id="github" class="card" href="https://github.com/100472261" target="_blank">
-          <img src="https://img.shields.io/badge/GitHub-%23121011.svg?logo=github&logoColor=white" alt="GitHub" />
+        <a id="github" class="card" href="https://github.com/100472261" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+          <img class="card-icon" src="https://skillicons.dev/icons?i=github&perline=1" alt="GitHub">
+          <h2 class="card-text">GitHub</h2>
+        </a>
         </a>
       </div>
     </div>
