--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <hr>
     <div class="contacto">
-      <h2 id="titulo-contacto">📫 Contacto:</h2>
+      <h2 id="titulo-contacto">📫 Contacto y CV:</h2>
       <div class="grid-contacto">
         <a id="linkedin" class="card" href="https://www.linkedin.com/in/jesus-maria-llanes" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
           <img class="card-icon" src="https://skillicons.dev/icons?i=linkedin&perline=1" alt="Linkedin">
@@ -83,6 +83,9 @@
           <img class="card-icon" src="https://skillicons.dev/icons?i=github&perline=1" alt="GitHub">
           <h2 class="card-text">GitHub</h2>
         </a>
+        <a id="cv" class="card" href="files/CV Jesús Mª Llanes.pdf" download="CV Jesús Mª Llanes.pdf" aria-label="Descargar CV">
+          <img class="card-icon" src="images/flecha-hacia-abajo.png" alt="CV">
+          <h2 class="card-text">CV</h2>
         </a>
       </div>
     </div>
