--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
           </div>
         </a>
       </div>
+      <div class="projects-grid-3">
+        <a class="project-card" href="https://github.com/100472261/Minishell" target="_blank">
+          <img src="images/Captura_minishell.JPG" alt="Proyecto 5" />
+          <div class="project-info">
+            <h2>Minishell</h2>
+            <p>Intérprete de mandatos.</p>
+          </div>
+        </a>
+        <a class="project-card" href="https://github.com/100472261/Multi-Threading" target="_blank">
+          <img src="images/Captura_multi-threading.JPG" alt="Proyecto 6" />
+          <div class="project-info">
+            <h2>Multi - Threading</h2>
+            <p>Programación multi-hilo.</p>
+          </div>
+        </a>
+      </div>
     </div>
     <hr>
     <div class="contacto">
