--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="skills-inner">
           <a href="https://skillicons.dev">
             <img class="skills-strip" draggable="false" loading="eager" decoding="async"
-              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,git,github,gitlab,docker,pycharm,vscode&perline=19" alt="My Skills">
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,git,github,gitlab,docker,pycharm,vscode&perline=20" alt="My Skills">
           </a>
           <a href="https://skillicons.dev">
             <img class="skills-strip" draggable="false" loading="eager" decoding="async"
-              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,git,github,gitlab,docker,pycharm,vscode&perline=19" alt="My Skills">
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,github,gitlab,docker,pycharm,vscode&perline=20" alt="My Skills">
           </a>
         </div>
       </div>
