--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
           <img src="images/Preprocesado.JPG" alt="Proyecto 2" />
           <div class="project-info">
-            <h2>Preprocesado de datos</h2>
-            <p>Limpieza y transformación de datos.</p>
+            <h2>ETL con Python</h2>
+            <p>Extracción, transformación y carga de datos.</p>
           </div>
         </a>
       </div>
