--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Trabajo de Fin de Grado.</p>
           </div>
         </a>
-        <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
+        <a class="project-card" href="https://github.com/100472261/ETL" target="_blank">
           <img src="images/Preprocesado.JPG" alt="Proyecto 2" />
           <div class="project-info">
             <h2>ETL con Python</h2>
