--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Multi-Threading" target="_blank">
-          <img src="images/C.JPG" alt="Proyecto 6" />
+          <img src="images/C.jpg" alt="Proyecto 6" />
           <div class="project-info">
             <h2>Multi - Threading</h2>
             <p>Programación multi-hilo.</p>
