--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <h2>🤖 Proyectos Data Science - IA:</h2>
       <div class="projects-grid-1">
         <a class="project-card" href="https://github.com/100472261/TFG" target="_blank">
-          <img src="images/Python-TensorFlow-Jupyter.jpg" alt="Proyecto 1" />
+          <img src="images/Python-TensorFlow-Jupyter-v2.jpg" alt="Proyecto 1" />
           <div class="project-info">
             <h2>TFG</h2>
             <p>Trabajo de Fin de Grado.</p>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
-          <img src="images/Python.jpg" alt="Proyecto 2" />
+          <img src="images/Python-v2.jpg" alt="Proyecto 2" />
           <div class="project-info">
             <h2>Preprocesado de datos</h2>
             <p>Limpieza de datos con Python.</p>
@@ -52,14 +52,14 @@
       </div>
       <div class="projects-grid-2">
         <a class="project-card" href="https://github.com/100472261/Power-BI" target="_blank">
-          <img src="images/Power-BI.jpg" alt="Proyecto 3" />
+          <img src="images/Power-BI-v2.jpg" alt="Proyecto 3" />
           <div class="project-info">
             <h2>Power BI</h2>
             <p>Reportes hechos con esta herramienta.</p>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Tableau" target="_blank">
-          <img src="images/Tableau-Logo.jpg" alt="Proyecto 4" />
+          <img src="images/Tableau-Logo-v2.jpg" alt="Proyecto 4" />
           <div class="project-info">
             <h2>Tableau</h2>
             <p>Reportes hechos con esta herramienta.</p>
@@ -68,18 +68,14 @@
       </div>
       <div class="projects-grid-3">
         <a class="project-card" href="https://github.com/100472261/Weather-Data-Pipeline" target="_blank">
-          <img src="images/Airflow-PostgreSQL-Docker.jpg" alt="Proyecto 5" />
+          <img src="images/Airflow-PostgreSQL-Docker-v2.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>Weather Data Pipeline</h2>
             <p>Extracción y carga de datos meteorológicos.</p>
           </div>
         </a>
         <a class="project-card" target="_blank">
-          <img src="images/Loading.jpg" alt="Proyecto 6" />
-          <div class="project-info">
-            <h2>loading...</h2>
-            <p>loading...</p>
-          </div>
+          <img src="images/Loading-v2.jpg" alt="Proyecto 6" class="loading-img"/>
         </a>
       </div>
     </div>
@@ -88,14 +84,14 @@
       <h2>🎓 Otros proyectos:</h2>
       <div class="projects-grid-4">
         <a class="project-card" href="https://github.com/100472261/Minishell" target="_blank">
-          <img src="images/C.jpg" alt="Proyecto 5" />
+          <img src="images/C-v2.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>Minishell</h2>
             <p>Intérprete de mandatos.</p>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Multi-Threading" target="_blank">
-          <img src="images/C.jpg" alt="Proyecto 6" />
+          <img src="images/C-v2.jpg" alt="Proyecto 6" />
           <div class="project-info">
             <h2>Multi - Threading</h2>
             <p>Programación multi-hilo.</p>
