--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
     <div class="profile">
-      <img src="images/profile.svg" alt="Foto de perfil" />
+      <img src="images/Foto-Perfil-v2.jpg" alt="Foto de perfil" />
       <header>
         <h1>Jesús Mª Llanes</h1>
         <p>💻 Ingeniero Informático</p>
