--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <p>Trabajo de Fin de Grado.</p>
           </div>
         </a>
-        <a class="project-card" href="https://github.com/100472261/Preprocesado-de-datos" target="_blank">
+        <a class="project-card" href="https://github.com/100472261/Data-Preprocessing" target="_blank">
           <img src="images/Python-v2.jpg" alt="Proyecto 2" />
           <div class="project-info">
-            <h2>Preprocesado de datos</h2>
+            <h2>Data Preprocessing</h2>
             <p>Limpieza de datos con Python.</p>
           </div>
         </a>
@@ -74,8 +74,12 @@
             <p>Extracción y carga de datos meteorológicos.</p>
           </div>
         </a>
-        <a class="project-card" target="_blank">
-          <img src="images/Loading-v2.jpg" alt="Proyecto 6" class="loading-img"/>
+         <a class="project-card" href="https://github.com/100472261/CRUD-Operations-FastAPI" target="_blank">
+          <img src="images/FastAPI-PostgreSQL-Docker.jpg" alt="Proyecto 5" />
+          <div class="project-info">
+            <h2>CRUD Operations FastAPI</h2>
+            <p>Operaciones CRUD sobre BD PostgreSQL.</p>
+          </div>
         </a>
       </div>
     </div>
