--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         <div class="skills-inner">
           <a href="https://skillicons.dev">
             <img class="skills-strip" draggable="false" loading="eager" decoding="async"
-              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,git,github,gitlab,docker,pycharm,vscode&perline=20" alt="My Skills">
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,fastapi,git,github,gitlab,docker,pycharm,vscode&perline=21" alt="My Skills">
           </a>
           <a href="https://skillicons.dev">
             <img class="skills-strip" draggable="false" loading="eager" decoding="async"
-              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,github,gitlab,docker,pycharm,vscode&perline=20" alt="My Skills">
+              src="https://skillicons.dev/icons?i=windows,linux,py,c,cpp,html,css,js,pytorch,sklearn,tensorflow,cassandra,mongodb,postgres,fastapi,github,gitlab,docker,pycharm,vscode&perline=21" alt="My Skills">
           </a>
         </div>
       </div>
     </div>
     <hr>
     <div class="projects">
-      <h2>🤖 Proyectos Data Science - IA:</h2>
+      <h2 id="titulo-proyectos">🤖 Proyectos Data Science - IA:</h2>
       <div class="projects-grid-1">
         <a class="project-card" href="https://github.com/100472261/TFG" target="_blank">
           <img src="images/Python-TensorFlow-Jupyter-v2.jpg" alt="Proyecto 1" />
@@ -85,7 +85,7 @@
     </div>
     <hr>
     <div class="projects">
-      <h2>🎓 Otros proyectos:</h2>
+      <h2 id="titulo-otros-proyectos">🎓 Otros proyectos:</h2>
       <div class="projects-grid-4">
         <a class="project-card" href="https://github.com/100472261/Minishell" target="_blank">
           <img src="images/C-v2.jpg" alt="Proyecto 5" />
