--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
           <div class="project-info">
             <h2>TFG</h2>
             <p>Trabajo de Fin de Grado.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Python</span>
+              <span class="tech-tag">TensorFlow</span>
+              <span class="tech-tag">Jupyter Notebook</span>
+            </div>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Data-Preprocessing" target="_blank">
@@ -47,6 +52,11 @@
           <div class="project-info">
             <h2>Data Preprocessing</h2>
             <p>Limpieza de datos con Python.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Python</span>
+              <span class="tech-tag">NumPy</span>
+              <span class="tech-tag">Pandas</span>
+            </div>
           </div>
         </a>
       </div>
@@ -56,6 +66,9 @@
           <div class="project-info">
             <h2>Power BI</h2>
             <p>Reportes hechos con esta herramienta.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Power BI</span>
+            </div>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Tableau" target="_blank">
@@ -63,22 +76,37 @@
           <div class="project-info">
             <h2>Tableau</h2>
             <p>Reportes hechos con esta herramienta.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Tableau</span>
+            </div>
           </div>
         </a>
       </div>
       <div class="projects-grid-3">
         <a class="project-card" href="https://github.com/100472261/Weather-Data-Pipeline" target="_blank">
-          <img src="images/Airflow-PostgreSQL-Docker-v2.jpg" alt="Proyecto 5" />
+          <img src="images/weather pipeline technologies.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>Weather Data Pipeline</h2>
-            <p>Extracción y carga de datos meteorológicos.</p>
+            <p>Pipeline de datos end-to-end automatizado.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Apache Airflow</span>
+              <span class="tech-tag">PostgreSQL</span>
+              <span class="tech-tag">dbt</span>
+              <span class="tech-tag">Docker</span>
+            </div>
           </div>
         </a>
          <a class="project-card" href="https://github.com/100472261/CRUD-Operations-FastAPI" target="_blank">
-          <img src="images/FastAPI-PostgreSQL-Docker.jpg" alt="Proyecto 5" />
+          <img src="images/Fastapi.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>CRUD Operations FastAPI</h2>
             <p>Operaciones CRUD sobre BD PostgreSQL.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Python</span>
+              <span class="tech-tag">FastAPI</span>
+              <span class="tech-tag">PostgreSQL</span>
+              <span class="tech-tag">Docker</span>
+            </div>
           </div>
         </a>
       </div>
@@ -92,6 +120,11 @@
           <div class="project-info">
             <h2>Minishell</h2>
             <p>Intérprete de mandatos.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Linux</span>
+              <span class="tech-tag">C</span>
+              <span class="tech-tag">Bash</span>
+            </div>
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Multi-Threading" target="_blank">
@@ -99,6 +132,11 @@
           <div class="project-info">
             <h2>Multi - Threading</h2>
             <p>Programación multi-hilo.</p>
+            <div class="project-tech">
+              <span class="tech-tag">Linux</span>
+              <span class="tech-tag">C</span>
+              <span class="tech-tag">Bash</span>
+            </div>
           </div>
         </a>
       </div>
