cambios en las imágenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2 id="titulo-proyectos">🤖 Proyectos Data Science - IA:</h2>
       <div class="projects-grid-1">
         <a class="project-card" href="https://github.com/100472261/TFG" target="_blank">
-          <img src="images/Python-TensorFlow-Jupyter-v2.jpg" alt="Proyecto 1" />
+          <img src="images/tfg.jpg" alt="Proyecto 1" />
           <div class="project-info">
             <h2>TFG</h2>
             <p>Trabajo de Fin de Grado.</p>
@@ -48,7 +48,7 @@
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Data-Preprocessing" target="_blank">
-          <img src="images/Python-v2.jpg" alt="Proyecto 2" />
+          <img src="images/py.jpg" alt="Proyecto 2" />
           <div class="project-info">
             <h2>Data Preprocessing</h2>
             <p>Limpieza de datos con Python.</p>
@@ -62,7 +62,7 @@
       </div>
       <div class="projects-grid-2">
         <a class="project-card" href="https://github.com/100472261/Power-BI" target="_blank">
-          <img src="images/Power-BI-v2.jpg" alt="Proyecto 3" />
+          <img src="images/powerbi.jpg" alt="Proyecto 3" />
           <div class="project-info">
             <h2>Power BI</h2>
             <p>Reportes hechos con esta herramienta.</p>
@@ -72,7 +72,7 @@
           </div>
         </a>
         <a class="project-card" href="https://github.com/100472261/Tableau" target="_blank">
-          <img src="images/Tableau-Logo-v2.jpg" alt="Proyecto 4" />
+          <img src="images/tableau.jpg" alt="Proyecto 4" />
           <div class="project-info">
             <h2>Tableau</h2>
             <p>Reportes hechos con esta herramienta.</p>
@@ -84,7 +84,7 @@
       </div>
       <div class="projects-grid-3">
         <a class="project-card" href="https://github.com/100472261/Weather-Data-Pipeline" target="_blank">
-          <img src="images/weather pipeline technologies.jpg" alt="Proyecto 5" />
+          <img src="images/weather.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>Weather Data Pipeline</h2>
             <p>Pipeline de datos end-to-end automatizado.</p>
@@ -97,7 +97,7 @@
           </div>
         </a>
          <a class="project-card" href="https://github.com/100472261/CRUD-Operations-FastAPI" target="_blank">
-          <img src="images/Fastapi.jpg" alt="Proyecto 5" />
+          <img src="images/fastapi_ok.jpg" alt="Proyecto 5" />
           <div class="project-info">
             <h2>CRUD Operations FastAPI</h2>
             <p>Operaciones CRUD sobre BD PostgreSQL.</p>
